--- a/js03/js03.html
+++ b/js03/js03.html
@@ -8,8 +8,9 @@
 </head>
 <body>
     <h1>Sesión JS03</h1>
-    <label for ="temperatura">Escribe tu temperatura deseada</label>
-    <input id="temperatura " type="number" min ="-5" max="40">
+    <label for ="mes">Selecciona el mes de nacimiento: </label>
+    <input id="mes" type="number" min ="1" max="12">
+    <button onclick="getEstacion2()">Estación del año</button>
     <script src="js03.js"></script>
 </body>
 </html>
