ci: actualización js y html

--- a/js06 /js06.html
+++ b/js06 /js06.html
@@ -21,10 +21,18 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos praesentium officiis, sed necessitatibus tenetur mollitia nam nesciunt optio blanditiis aliquid quasi voluptas magnam ex placeat minus suscipit soluta ab et. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi laudantium eius et quidem dolorem omnis aliquid, culpa sunt nemo veniam totam, inventore accusantium minus? Eligendi ipsam magni veritatis asperiores quos.
         </p>
     </article>
-    <article>
+    <article id="article-news">
         <p class="noticias" id="noticias">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos praesentium officiis, sed necessitatibus tenetur mollitia nam nesciunt optio blanditiis aliquid quasi voluptas magnam ex placeat minus suscipit soluta ab et. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi laudantium eius et quidem dolorem omnis aliquid, culpa sunt nemo veniam totam, inventore accusantium minus? Eligendi ipsam magni veritatis asperiores quos.
+            Segundo article 
+        </p>
     </article>
+    <button id="botonA">A</button>
+    <button id="botonB">B</button>
+    <button id="botonC">C</button>
+    <button id="botonQuitar" onclick="quitarBoton()">Quitar</button>
+    <button id="botonOcultar" onclick="ocultarBoton()">Ocultar</button>
+    <button id="botonReestablecer" onclick="reestablecerBoton()">Reestablecer</button>
+
     <script src="./js06.js"></script>
 </body>
 </html>
