--- a/js09/index.html
+++ b/js09/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
     <h1>JS09 uso de NPM</h1>
+    <button type="button" onclick="getUsersFetch()"class="btn btn-primary">Users</button>
+    <button type="button" onclick="getUsersAxios()"class="btn btn-primary">Users Axios Fetch</button>
+    <button type="button" onclick="getUsersAxiosAwait()"class="btn btn-primary">Users Axios Await</button>
+    <button type="button" onclick="postAxios()"class="btn btn-primary">Post Axios Await</button>
 
     <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="./node_modules/axios/dist/axios.min.js"></script>
